WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288708
[Materials] Crash when removing hosted materials
https://bugs.webkit.org/show_bug.cgi?id=288708
Summary
[Materials] Crash when removing hosted materials
Aditya Keerthi
Reported
2025-02-27 00:33:42 PST
rdar://145703767
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2025-02-27 01:07:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41503
EWS
Comment 2
2025-02-27 08:42:15 PST
Committed
291228@main
(b7292a414ad0): <
https://commits.webkit.org/291228@main
> Reviewed commits have been landed. Closing PR #41503 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug