Source/WebKit/Platform/cocoa/WKMaterialHostingSupport.h
@@ -53,12 +53,12 @@ NS_SWIFT_UI_ACTOR
 
 + (BOOL)isMaterialHostingAvailable;
 
-+ (CALayer *)createHostingLayer;
++ (CALayer *)hostingLayer;
 + (void)updateHostingLayer:(CALayer *)hostingLayer materialEffectType:(WKHostedMaterialEffectType)materialEffectType colorScheme:(WKHostedMaterialColorScheme) colorScheme cornerRadius:(CGFloat)cornerRadius;
 + (nullable CALayer *)contentLayerForMaterialHostingLayer:(CALayer *)hostingLayer;
 
 #if PLATFORM(IOS_FAMILY)
-+ (UIView *)createHostingView:(UIView *)contentView;
++ (UIView *)hostingView:(UIView *)contentView;
 + (void)updateHostingView:(UIView *)hostingView contentView:(UIView *)contentView materialEffectType:(WKHostedMaterialEffectType)materialEffectType colorScheme:(WKHostedMaterialColorScheme) colorScheme cornerRadius:(CGFloat)cornerRadius;
 #endif
 
